# meeting-recorder

./: .gitignore  Makefile  README.md  build-pkg.sh  build.sh  install.sh  meeting-recorder.spec  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh
.firecrawl/: search-whisper-cli.json
scripts/: generate_icns.py
src/: main.py
src/models/: schemas.py
src/recording/: engine.py  level_manager.py
src/settings/: encryption.py  manager.py  passphrase_manager.py
src/summarization/: llm_client.py
src/summarization/providers/: anthropic.py  base.py  lm_studio.py  ollama.py  openai.py  vllm.py
src/transcription/: whisper_client.py
src/ui/: main_window.py
src/ui/components/: advanced_llm_dialog.py  audio_meter.py  recording_panel.py  settings_dialog.py  speaker_rename_dialog.py  summary_panel.py  transcript_panel.py
src/ui/styles/: __init__.py  dark_theme.py  themes.py
src/utils/: export.py  sleep_prevention.py
tests/: conftest.py
tests/test_models/: test_audio_format.py  test_schemas.py
tests/test_recording/: test_engine.py
tests/test_settings/: test_encryption.py  test_manager.py  test_passphrase_manager.py
tests/test_summarization/: test_llm.py
tests/test_system/: test_pipeline.py
tests/test_transcription/: test_whisper_client.py
tests/test_ui/: test_components.py  test_main_window.py  test_speaker_rename.py  test_thread_cancel.py
tests/test_utils/: test_export.py  test_uninstall.py
whisper-diarization/: .gitignore  LICENSE  requirements.txt  transcribe.py
